--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-copy-to-clipboard": "5.0.2",
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
+    "react-dropzone": "^11.0.1",
     "react-google-maps": "9.4.5",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.0",
