--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.12.1",
     "chart.js": "2.9.3",
-    "classnames": "2.2.6",
+    "classnames": "^2.2.6",
     "moment": "2.24.0",
     "node-sass": "4.13.1",
     "nouislider": "14.1.1",
@@ -58,6 +58,7 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.0",
+    "react-spinners-kit": "^1.9.1",
     "reactstrap": "8.4.1"
   },
   "devDependencies": {
